# monorepo

./: .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .mise.toml  README.md  dev.code-profile
.github/workflows/: apps_bountisol_app_deploy.yml  apps_exboost_app_deploy.yaml  apps_exboost_app_lint.yaml  (+3 more)
apps/bountisol/programs/programs/bounty/: Cargo.toml
apps/bountisol/programs/programs/bounty/src/: errors.rs  events.rs  lib.rs  state.rs
apps/bountisol/programs/programs/bounty/src/instructions/: assign.rs  create.rs  fund.rs  mod.rs  release.rs
apps/priceview/backend/: pyproject.toml
apps/priceview/backend/priceview/: manage.py
apps/priceview/backend/priceview/priceview/: asgi.py  settings.py  urls.py  wsgi.py
apps/site/: README.md  mkdocs.yml  package-lock.json  pyproject.toml
apps/site/docs/blog/posts/drafts/: elixir_fine_tune_intro.md  elixir_fine_tune_spot.md  nx_serving.md  phx_and_react.md  pirate_day.md
apps/site/docs/posts/: 2024_07_22-bought_tt_grayskull.md  2024_07_22-tt_hacking_phi3_p1.md
apps/site/sh/: reqs.sh  start.sh
apps/site/src/pages/: about.astro  index.astro
apps/tenshare/: .env_  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
apps/tenshare/sh/: shell.sh
apps/tenshare/tenshare/: manage.py
apps/tenshare/tenshare/tenshare/: asgi.py  settings.py  urls.py  wsgi.py
apps/tenshare/tenshare/web/templates/: _base.html  index.html
apps/tenshare/tenshare/web/tests/: test_setup.py
exercises/coinbase_stream/: .env_  .gitignore  README.md  pyproject.toml
exercises/coinbase_stream/nbs/: import_data.py  test.ipynb
exercises/coinbase_stream/sh/: empty.sh  setup.sh  start.sh
exercises/coinbase_stream/src/: listen.py
exercises/nano_gpt_ex/py/: pyproject.toml
exercises/nano_gpt_ex/py/notebooks/: data_bigcode.ipynb  test.ipynb
exercises/nano_gpt_ex/py/src/: prepare.py
exercises/rs_react_sol/balance_checker/: Cargo.toml  README.md  package-lock.json
exercises/rs_react_sol/balance_checker/frontend/: package-lock.json  package.json
exercises/rs_react_sol/balance_checker/frontend/src/: App.tsx
exercises/rs_react_sol/balance_checker/src/: main.rs
libs/ex/llama_cpp_nif/native/llama/: Cargo.toml
libs/py/emblem/: .envrc  .gitignore  .secret_  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  settings.ini
libs/py/emblem/.github/workflows/: docs.yaml  lint.yaml  publish.yaml  test.yaml
libs/py/emblem/data/: corpus.jsonl
libs/py/emblem/emblem/: _modidx.py  core.py  data.py  eval.py  infer.py  llm.py  model.py  os.py  train.py
libs/py/emblem/nbs/: nbdev.yml
libs/py/emblem/nbs_py/: 00_core.py  02_os.py  03_data.py  06_train.py  index.py
libs/py/emblem/notes/: README.md  references.md  roadmap.md  todo.md  training.md
libs/py/emblem/sh/: build.sh  bump.sh  format.sh  lint.sh  nbs.sh  publish.sh  reqs.sh  sagemaker.sh  sagemaker_install.sh  sync.sh  test.sh
libs/py/octo_render/: pyproject.toml
libs/py/octo_render/octo_render/: main.py
libs/py/rager/: .envrc  .gitignore  LICENSE  README.md  pyproject.toml  settings.ini
libs/py/rager/.github/workflows/: deploy.yaml  test.yaml
libs/py/rager/nbs/: 00_core.ipynb  01_dag.ipynb  02_tokens.ipynb  03_chunk.ipynb  04_embed.ipynb  05_retrieve.ipynb  06_rerank.ipynb  _template.ipynb  index.ipynb  nbdev.yml  sidebar.yml
libs/py/rager/nbs/api/: app.ipynb  lifespan.ipynb
libs/py/rager/nbs/watcher/: app.ipynb
libs/py/rager/rager/: _modidx.py  chunk.py  dag.py  embed.py  rerank.py  retrieve.py  tokens.py
libs/py/rager/rager/api/: app.py  lifespan.py
libs/py/rager/rager/watcher/: app.py
libs/py/rager/sh/: api.sh  build.sh  format.sh  install.sh  lint.sh  nbs.sh  watcher.sh
libs/pyth_ex/native/pyth_ex/: Cargo.toml  README.md
libs/pyth_ex/native/pyth_ex/src/: lib.rs
research/alchemist_lm/: README.md  pyproject.toml
research/alchemist_lm/src/: download.exs
research/elixir_code_lm/: .gitignore  README.md  pyproject.toml
research/emigrate/: .envrc  .gitignore  README.md  pyproject.toml
research/emigrate/emigrate/: dataset.py
research/emigrate/sh/: format.sh  install.sh  nbs.sh
research/rlmm/: .dockerignore  .env_  .gitignore  Dockerfile  MANIFEST.in  README.md  dvc.yaml  pyproject.toml  requirements_no_gpu.txt  settings.ini
research/rlmm/.dvc/: config
research/rlmm/conf/: conf.yaml
research/rlmm/conf/datasets/: base.yaml  book.yaml  trades.yaml
research/rlmm/conf/envs/: order_book.yaml
research/rlmm/conf/trainers/: base.yaml
research/rlmm/conf/wrappers/: discrete_action.yaml
research/rlmm/data/: .gitignore  raw.dvc  test.dvc
research/rlmm/nbs/: .gitignore  00_core.ipynb  01_utils.ipynb  02_datasets.ipynb  03_envs.ipynb  04_wrappers.ipynb  05_agents.ipynb  06_trainers.ipynb  _publish.yml  data_parquet.ipynb  dvc_yaml.ipynb  hydra.ipynb  index.ipynb  nbdev.yml  paper.ipynb  sidebar.yml  stats_describe.ipynb  stats_plot.ipynb  stats_size.ipynb  train.ipynb
research/rlmm/outs/: dir_size_23_03_28-14_56_34.csv  stats_book_ETHUSDT_23_03_28-16_46_59.csv  stats_trades_ETHUSDT_23_03_28-16_45_25.csv
research/rlmm/paper/: bibliography.bib  paper.qmd  paper.tex
research/rlmm/rlmm/: _modidx.py  agents.py  core.py  datasets.py  envs.py  trainers.py  utils.py  wrappers.py
research/rlmm/sh/: docker.sh  docs.sh  format.sh  genesis.sh  lint.sh  paper.sh  reqs.sh  test.sh
utils/django_template/py/: .envrc  .gitignore  .prettierignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
utils/django_template/py/lend_look/: manage.py
utils/django_template/py/lend_look/lend_look/: asgi.py  settings.py  urls.py  wsgi.py
utils/django_template/py/lend_look/web/templates/: _base.html  index.html
utils/django_template/py/sh/: db.sh  format.sh  lint.sh  shell.sh  start.sh  test.sh
utils/makeme/: Cargo.toml  README.md
utils/makeme/sh/: run.sh
utils/makeme/src/: main.rs  project.rs
utils/tissue/: Cargo.toml  README.md  build.rs
utils/tissue/src/: main.rs
utils/tissue/src_fe/: README.md  bun.lockb  package.json  tailwind.config.js
(+1383 files in other folders)
