[tool.poetry]
name = "site"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [ { include = "**/*.py", from = "."  }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.5.26"
mkdocs-rss-plugin = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
