[tool.poetry]
name = "tenshare"
version = "0.1.0"
description = ""
authors = ["Marko Vukovic <mvkvc.git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-cors-headers = "^4.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
