[tool.poetry]
name = "coinbase-stream"
version = "0.1.0"
description = ""
authors = ["Marko Vukovic <mvkvc.git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
python-dotenv = "^1.0.0"
websockets = "^11.0"
azure-storage-blob = "^12.15.0"
pyarrow = "^11.0.0"
pandas = "^2.0.0"
sortedcollections = "^2.1.0"
click = "^8.1.3"
slack-sdk = "^3.21.0"
aiohttp = "^3.8.4"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.3"
black = "^23.3.0"
isort = "^5.12.0"
scalene = "^1.5.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_single_line = true
force_sort_within_sections = true
force_alphabetical_sort_within_sections = true
reverse_relative = true
