[tool.poetry]
name = "alchemist-lm"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.10"
datasets = "^2.14.6"
transformers = "^4.35.0"
tokenizers = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
