[tool.poetry]
name = "rlmm"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
jupyterlab = "^3.6.2"
nbdev = "^2.3.12"
jupyterlab-quarto = "^0.1.45"
papermill = "^2.4.0"
dvc = {extras = ["s3"], version = "^2.51.0"}
pygit2 = "1.11.1"
dask = {extras = ["complete"], version = "^2023.3.2"}
fastparquet = "^2023.2.0"
gymnasium = "^0.28.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
hydra-core = "^1.3.2"
python-dotenv = "^1.0.0"
wandb = "^0.14.0"

[tool.poetry.group.gpu.dependencies]
torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp310-cp310-linux_x86_64.whl"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
nbqa = "^1.6.4"
black = "^23.1.0"
isort = "^5.12.0"
pylint = "^2.17.4"
mypy = "^1.1.1"
pandas-stubs = "^1.5.3.230321"
scalene = "^1.5.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_single_line = true
force_sort_within_sections = true
force_alphabetical_sort_within_sections = true
reverse_relative = true

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = []
