[package]
name = "makeme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive", "string"] }
glob = "0.3.1"
relative-path = "1.9.2"
serde = "1.0.204"
serde_yml = "0.0.10"
