[tool.poetry]
name = "nano-gpt-ex"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
dvc = {extras = ["s3"], version = "^2.43.2"}
datasets = "^2.9.0"
tiktoken = "^0.2.0"
numpy = "^1.24.1"
tqdm = "^4.64.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
