[package]
name = "balance_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
serde_json = "1.0.108"
solana-client = "1.17.6"
solana-sdk = "1.17.6"
tokio = { version = "1.34.0", features = [] }
tower-http = { version = "0.5.0", features = ["cors"] }
http = "1.0.0"
tower = "0.4.13"
