[tool.poetry]
name = "rager"
version = "0.1.0"
description = ""
license = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = "^2.7.1"
sentence-transformers = "^2.7.0"
tiktoken = "^0.6.0"
openai = "^1.25.0"
networkx = "^3.1"
sqlmodel = "^0.0.18"
pgvector = "^0.2.5"
pymupdf = "^1.24.4"
matplotlib = "^3.9.0"

[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
uvicorn = { extras = ["standard"], version = "^0.29.0" }
fastapi = "^0.111.0"
requests = "^2.32.1"

[tool.poetry.group.watcher]
optional = true

[tool.poetry.group.watcher.dependencies]
click = "^8.1.7"
watchdog = "^4.0.0"
sqlmodel = "^0.0.18"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.0"
nbdev = "^2.3.23"
nbqa = "^1.8.5"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
nuitka = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
