[package]
name = "pyth_ex"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "pyth_ex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.30.0", features = ["nif_version_2_16"] }
pyth-sdk-solana = "0.9.0"
solana-client = "1.17.13"
solana-program = "1.17.13"
